@@ -6,6 +6,8 @@ depends:
     ir
     party
     sale
+extras_depend:
+    sale_promotion_coupon
 xml:
     complaint.xml
     sale.xml
